# beatrice_trainer

./: README.md  pyproject.toml
beatrice_trainer/src/: dataset.py  discriminator.py  feature_processing.py  train.py  utils.py  vocoder.py
src/: feature_processing.py  network_utils.py  train.py  utils.py  vocoder.py
